# set-search-experiment

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eval.json  unpack.sh
bench/: Cargo.toml
bench/benches/: search.rs
data/: gutenberg.db.txt.zst  gutenberg.query.txt.zst
scripts/: README.md  parse_criterion.py  parse_eval.py  plot_stats.py
src/: inverted_index.rs  lib.rs  linear_scan.rs  mapping.rs  metric.rs  set.rs  text.rs
tools/: Cargo.toml
tools/src/: evaluate.rs  linear_search.rs  search.rs  stats.rs
