[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
set-search-experiment = { path = ".." }

[[bin]]
name = "stats"
path = "src/stats.rs"

[[bin]]
name = "linear_search"
path = "src/linear_search.rs"

[[bin]]
name = "evaluate"
path = "src/evaluate.rs"
